# istr

./: Cargo.toml  Justfile
fixtures/: large_string.txt
istr/: Cargo.toml
istr-test/: Cargo.toml
istr-test/src/: main.rs
istr/src/: cache.rs  hasher.rs  leaky_alloc.rs  lib.rs  main.rs
