[package]
name = "istr"
version = "0.1.0"
edition = "2021"

description = "a fast string interning library based off of ustr"
license = "MIT"
categories = ["text-processing", "data-structures", "caching"]
keywords = ["interning", "string", "FFI", "ustr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cache-utf8 = ['simdutf8']

[dependencies.hashbrown]
version = '0.14'
features = ['raw']

[dependencies.ahash]
version = '0.8'

[dependencies.nohash-hasher]
version = '0.2'

[dependencies.simdutf8]
version = '0.1'
optional = true
